# mcp-prompt-manager

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mcp_prompt_manager/: __init__.py  api_client.py  mcp_server.py
